fine esercizio standard

--- a/index.html
+++ b/index.html
@@ -43,26 +43,26 @@
         <aside class="d-flex flex-column justify-content-between align-items-center">
             <div class="icon_top pt-3">
                 <div class="home text-white d-flex pt-1">
-                    <i class="fa-solid fa-house ps-2 pt-1"></i>
+                    <i class="fa-solid fa-house ps-md-2 pt-1"></i>
                     <div class="logo_house px-3 d-none d-lg-block">home</div>
                 </div>
                 <div class="statics text-white d-flex pt-1">
-                    <i class="fa-solid fa-house ps-2 pt-1"></i>
+                    <i class="fa-solid fa-home ps-md-2 pt-1"></i>
                     <div class="logo_house px-3 d-none d-lg-block">Stats</div>
                 </div>
                 <div class="volum text-white d-flex pt-1">
-                    <i class="fa-solid fa-signal ps-2 pt-1"></i>
+                    <i class="fa-solid fa-signal ps-md-2 pt-1"></i>
                     <div class="logo_house px-3 d-none d-lg-block">Signal</div>
                 </div>
             </div>
             <div class="icon_bottom text-white d-flex align-items-center pb-3">
-                <i class="fa-solid fa-gear ps-2"></i>
+                <i class="fa-solid fa-gear ps- md-2"></i>
                 <div class="logo_house px-3 d-none d-lg-block">Admin</div>
             </div>
         </aside>
         <div class="cont_general d-flex flex-column">
             <section class="bg_blue">
-                <div class="container-xl top_main text-white">
+                <div class="container-xxl top_main text-white">
                     <div class="row mt-2">
                         <div class="col-8 col-md-4 my-2 d-flex order-md-last">
                             <h5>Nuovo Studente</h5>
@@ -76,7 +76,10 @@
                             <div class="d-flex align-items-center">
                                 <button class="btn btn-primary">3 app</button>
                                 <div>>></div>
-                                <button class="btn btn-primary rounded-circle">+</button>
+                                <button class="btn btn-primary rounded-circle d-lg-none">+</button>
+                                <button class="btn btn-primary d-none d-lg-block mx-1">mobile app</button>
+                                <button class="btn btn-primary d-none d-lg-block mx-1">web app</button>
+                                <button class="btn btn-primary d-none d-lg-block mx-1">blog app</button>
                             </div>
                         </div>
                         <div class="col-8 col-md-4 my-2">
@@ -87,12 +90,12 @@
                 </div>
             </section>
             <section>
-                <div class="container-xl">
+                <div class="container-xxl">
                     <div class="row">
                         <div class="col-12 col-lg-8 mt-2">
                         <!-- tabella -->
                             <table class="table caption-top border">
-                                <caption class="border text-black">
+                                <caption class="border text-black bg-light">
                                     <h3>Prossime classi</h3>
                                 </caption>
                                 <thead>
@@ -115,7 +118,7 @@
                                         <td class="badge bg-success">Done</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -128,7 +131,7 @@
                                         <td class="badge bg-success">Done</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -141,7 +144,7 @@
                                         <td class="badge bg-warning">Process</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -154,7 +157,7 @@
                                         <td class="badge bg-success">Done</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -167,7 +170,7 @@
                                         <td class="badge bg-danger">Failed</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -180,7 +183,7 @@
                                         <td class="badge bg-success">Done</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -193,7 +196,7 @@
                                         <td class="badge bg-danger">Failed</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                     <tr>
@@ -206,7 +209,7 @@
                                         <td class="badge bg-success">Done</td>
                                         <td>
                                             <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
-                                            <i class="fa-solid fa-pen border border-2 rounded p-2"></i>
+                                            <i class="fa-solid fa-trash border border-2 rounded p-2"></i>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -215,13 +218,13 @@
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        <button class="accordion-button bg-light" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapseOne" aria-expanded="true"
                                             aria-controls="collapseOne">
                                             <h3>F.A.Q.</h3>
                                         </button>
                                     </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show"
+                                    <div id="collapseOne" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
                                             <strong>This is the first item's accordion body.</strong> It is shown by
@@ -239,7 +242,7 @@
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                             aria-expanded="false" aria-controls="collapseTwo">
-                                            Accordion Item #2
+                                            <p>Come aggiungere un nuovo studente?</p>
                                         </button>
                                     </h2>
                                     <div id="collapseTwo" class="accordion-collapse collapse"
@@ -260,7 +263,28 @@
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseThree"
                                             aria-expanded="false" aria-controls="collapseThree">
-                                            Accordion Item #3
+                                            <p>Come posso accedere alle informazioni sul mio account?</p>
+                                        </button>
+                                    </h2>
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <strong>This is the third item's accordion body.</strong> It is hidden by
+                                            default, until the collapse plugin adds the appropriate classes that we use
+                                            to style each element. These classes control the overall appearance, as well
+                                            as the showing and hiding via CSS transitions. You can modify any of this
+                                            with custom CSS or overriding our default variables. It's also worth noting
+                                            that just about any HTML can go within the <code>.accordion-body</code>,
+                                            though the transition does limit overflow.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
+                                            <p>Come posso usare questa dashboard da mobile?</p>
                                         </button>
                                     </h2>
                                     <div id="collapseThree" class="accordion-collapse collapse"
@@ -281,7 +305,7 @@
                         <!-- todo -->
                         <div class="col-12 col-lg-4 mt-2">
                             <table class="table caption-top border">
-                                <caption class="border"><h3>Todo</h3></caption>
+                                <caption class="border text-black bg-light"><h3>Todo</h3></caption>
                                 <thead>
                                     <tr>
                                         <th scope="col">
